# formhandle-sdk

./: README.md
elixir/: README.md  mix.exs
elixir/lib/: formhandle.ex
elixir/lib/formhandle/: api.ex  cli.ex  config.ex  output.ex  prompt.ex
elixir/lib/formhandle/commands/: cancel.ex  init.ex  open.ex  test.ex  (+4 more)
java/: README.md  jbang-catalog.json  pom.xml
npm/: README.md  package-lock.json  package.json  tsconfig.json
npm/src/: cli.ts  index.ts
npm/src/commands/: cancel.ts  init.ts  open.ts  resend.ts  snippet.ts  status.ts  test.ts  whoami.ts
npm/src/lib/: api.ts  config.ts  output.ts  prompt.ts
php/: README.md  composer.json
php/src/: Api.php  Cli.php  Config.php  Output.php  Prompt.php
php/src/Commands/: Cancel.php  Init.php  Open.php  Resend.php  Snippet.php  Status.php  Test.php  Whoami.php
python/: README.md  pyproject.toml
python/src/formhandle/: __init__.py  __main__.py  api.py  cli.py  config.py  output.py  prompt.py
python/src/formhandle/commands/: cancel.py  init.py  open.py  resend.py  snippet.py  status.py  test.py  whoami.py
rescript/: README.md  package.json  rescript.json
rescript/src/: Api.res  Cli.res  Config.res  Main.res  NodeBindings.res  Output.res  Prompt.res
rescript/src/Commands/: Cancel.res  Init.res  Open.res  Resend.res  Snippet.res  Status.res  Test.res  Whoami.res
ruby/: README.md  formhandle.gemspec
ruby/lib/: formhandle.rb
ruby/lib/formhandle/: api.rb  cli.rb  config.rb  output.rb  prompt.rb
rust/: Cargo.toml  README.md
rust/src/: api.rs  config.rs  main.rs  output.rs
rust/src/commands/: cancel.rs  init.rs  mod.rs  open.rs  resend.rs  snippet.rs  status.rs  test.rs  whoami.rs
(+23 files in other folders)
