[package]
name = "formhandle"
version = "0.1.0"
edition = "2021"
description = "CLI for FormHandle — form submissions as email"
license = "MIT"
homepage = "https://formhandle.dev"
repository = "https://github.com/ParapluOU/formhandle-examples"
keywords = ["form", "email", "serverless", "cli"]
categories = ["command-line-utilities", "web-programming"]
rust-version = "1.70"

[[bin]]
name = "formhandle"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
regex = "1"
